...
                isSelected: _currentIndex == 2,
                icon: Icons.history,
              ),
              label: "Lịch sử",
            ),
            BottomNavigationBarItem(
              key: const Key('accountIconButton'),
              icon: PulseIcon(
                isSelected: _currentIndex == 3,
                icon: Icons.person,
              ),
              label: "Tài khoản",
            ),
...
